fixed resizing and reloading issue by adding overflow hidden to containers

--- a/src/components/layout/layout.module.less
+++ b/src/components/layout/layout.module.less
@@ -2,7 +2,9 @@
 
 .container {
   margin: auto;
-  @media @tablet, @desktop {
+
+  @media @tablet,
+  @desktop {
     width: 97%;
   }
 }
@@ -13,7 +15,9 @@
     border-bottom: @border-medium solid @theme-title;
     text-transform: capitalize;
     text-shadow: 7px 7px @color-transparent;
-    @media @tablet, @desktop {
+
+    @media @tablet,
+    @desktop {
       text-align: right;
     }
   }
