--- a/src/components/post-list/post-list.module.less
+++ b/src/components/post-list/post-list.module.less
@@ -4,6 +4,7 @@
     .flex-center();
     justify-content: center;
     flex-direction: column;
+    overflow: hidden;
 
     @media @mobile {
         flex-direction: column;
