--- a/src/pages/about/index.module.less
+++ b/src/pages/about/index.module.less
@@ -3,6 +3,7 @@
 .container {
     .flex-center();
     .frame-medium();
+    overflow: hidden;
 
     @media @mobile {
         flex-direction: column;
